--- a/views/dc/graph.ejs
+++ b/views/dc/graph.ejs
@@ -198,7 +198,7 @@
     };
     network = new vis.Network(container, data, options);
     network.on('stabilized', function (params) {
-      network.fit({animation: true});
+      this.fit({animation: true});
     });
     network.on('selectNode', function (params) {
       let retval = getAllNodes(params.nodes, null);
